<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/usageLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/usageLabel"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/usageDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/usageDesc" />

    <TextView
        android:id="@+id/mapIconsLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/mapIconsLabel"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/skate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            app:srcCompat="@drawable/skate_med" />

        <TextView
            android:id="@+id/skateDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/skateDesc" />
    </LinearLayout>

    <TextView
        android:id="@+id/amenityIconsLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/amenityIconsLabel"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/washroom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            app:srcCompat="@drawable/washroom" />

        <TextView
            android:id="@+id/washroomDesc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/washroomDesc" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/changeroom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            app:srcCompat="@drawable/skatechangeroom" />

        <TextView
            android:id="@+id/changeroomDesc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/changeroomDesc" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/skateTrail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            app:srcCompat="@drawable/skatingtrail" />

        <TextView
            android:id="@+id/skateTrailDesc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/skateTrailDesc" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/skateRental"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            app:srcCompat="@drawable/skaterental" />

        <TextView
            android:id="@+id/skateRentalDesc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/skateRentalDesc" />
    </LinearLayout>

</LinearLayout>